Fix scrolling x-axis of adjustments tab on mobile

--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -15,6 +15,10 @@
   box-shadow: none;
 }
 
+.noUi-pips-horizontal {
+  height: auto;
+}
+
 .noUi-connect,
 .noUi-origin {
   -webkit-transition: transform 300ms;
@@ -304,7 +308,6 @@ html[data-theme="dark"] .noUi-target[disabled] .noUi-handle:after {
  */
 .svelte-slide-pips-horizontal {
   padding: 10px 0;
-  height: 80px;
   top: 100%;
   left: 0;
   width: 100%;
